[project]
name = "quickbooks-mcp-server"
version = "1.0.0"
description = "Custom MCP server for QuickBooks Online and Desktop integration with data entry automation"
authors = [{name = "V R", email = "vr@accounting.local"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.0.0",
    "intuit-oauth>=1.2.4",
    "python-quickbooks>=0.9.5",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
